--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "pokemon-game",
-  "version": "1.0.0",
-  "description": "Pokemon Game",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "typesctipt index.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/maxim-berdnikov/pokemon-game.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/maxim-berdnikov/pokemon-game/issues"
-  },
-  "homepage": "https://github.com/maxim-berdnikov/pokemon-game#readme",
-  "dependencies": {
-    "typescript": "^4.9.3"
-  }
+	"name": "pokemon-game",
+	"version": "1.0.0",
+	"description": "Pokemon Game",
+	"main": "index.js",
+	"scripts": {
+		"start": "webpack serve",
+		"tsc": "npx tsc index.ts"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/maxim-berdnikov/pokemon-game.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/maxim-berdnikov/pokemon-game/issues"
+	},
+	"homepage": "https://github.com/maxim-berdnikov/pokemon-game#readme",
+	"devDependencies": {
+		"file-loader": "^6.2.0",
+		"html-loader": "^4.2.0",
+		"ts-loader": "^9.4.1",
+		"typescript": "^4.9.3",
+		"webpack": "^5.75.0",
+		"webpack-cli": "^5.0.0",
+		"webpack-dev-server": "^4.11.1"
+	}
 }
